font index html 4

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-serif/fonts.css" />
-    <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-sans/fonts.css" />
-    <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-mono/fonts.css" />
+<!--    <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-serif/fonts.css" />-->
+<!--    <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-sans/fonts.css" />-->
+<!--    <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-mono/fonts.css" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seo Buffer</title>
   </head>
