--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-sans/fonts.css" />
     <link rel="stylesheet" href="./src/assets/fonts/ibm-plex-mono/fonts.css"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seo Buffer</title>
+    <title>Search Pusher</title>
   </head>
   <body>
     <div id="root"></div>
